--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+html 
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Sree's Website</title>
+  </head>
+
+<body>
+  <h1> Hello!! </h1>
+  <p> this is my first website after a long while</p>
+</body>
+  
+</html>
